--- a/styles/main.css
+++ b/styles/main.css
@@ -5,18 +5,17 @@
   text-align: center;
 }
 
-.pic-select{
-  position: relative;
-  display: block;
-}
-
 #dropzone{
   height: 450px;
   border: 2px dashed #34495E;
   line-height: 150px;
+  background-color: #CACFD2;
   outline-offset: -10px;
 }
 
+.jumbotron{
+  background-color: #AEB6BF;
+}
 
 #file{
   position: absolute;
@@ -27,4 +26,8 @@
 .js-dropzone.js-dragover{
   border-color: green;
   color: green;
+}
+
+#zone{
+  color: #2471A3;
 }
