--- a/styles/main.css
+++ b/styles/main.css
@@ -44,3 +44,23 @@
    height: auto;
    width: 0;
  }
+.select{
+  position: relative;
+}
+
+label{
+  cursor: pointer;
+}
+
+input{
+  position: absolute;
+  top:0;
+  left:0;
+  visibility: hidden;
+}
+small{
+  display: block;
+}
+.glyphicon{
+  font-size: 55px;
+}
