--- a/styles/main.css
+++ b/styles/main.css
@@ -25,13 +25,13 @@
    height: 275px;
    border: 1px solid #000;
    margin-bottom: 30px;
+   cursor: pointer;
  }
 
 .thumb-zoom{
-  padding-top: 15%;
+  height:100%;
   position: relative;
-  bottom: 800px;
-  transform: scale(.7);
+  display:block;
 }
 
 
@@ -62,4 +62,15 @@ output{
 
 .glyphicon{
   font-size: 55px;
+}
+
+.fullpage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: #D5DBDB;
+  display: none;
 }
