--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 .container{
-  margin-top: 7%;
+  margin-top: 5%;
   padding-left: 10%;
   padding-right: 10%;
   text-align: center;
@@ -30,8 +30,9 @@
 
 .thumb-zoom{
   height:100%;
-  position: relative;
+  position: absolute;
   display:block;
+  border-right: 6px groove #D35400;
 }
 
 
@@ -71,18 +72,19 @@ output{
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background-color: #D5DBDB;
+  background-color: rgba(39, 55 ,70, 0.94);
   display: none;
 }
 
 .js-box{
   position: absolute;
-  border: 1px solid green;
   z-index: 10;
-  /*background-color: rgba(0,255,0, 0.5)*/
+  background-color: rgba(247, 220, 111, 0.5)
 }
 
 #js-search{
   width: 30%;
   position: absolute;
+  margin-left: 66%;
+  top:20%;
 }
